fixing spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -311,7 +311,7 @@ code {
 
   .display {
     font-family: 'Courier New', Courier, monospace;
-    font-size: 10vw;
+    font-size: 9.4vw;
     line-height: 90%;
     letter-spacing: -2px;
    
